Added tutorial section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
 		<p>The library itself compiles quickly, has zero external dependencies, and links statically adding only around 250kb to the binary size of the game. Still it comes with plenty of features.</p>
 
 		<h3>Games using ZillaLib</h3>
-		<p>See <a href="/games/">the games page</a> for a list. These can be played directly in the web browser or downloaded, and come with full source code in the same license as ZillaLib.</p>
+		<p>See <a href="/games/">the games page</a> for a list. These can be played directly in the web browser or downloaded, and come with full source code under the same license as ZillaLib.</p>
 
 		<h3>Sample Code</h3>
 		<p>See <a href="/samples/">the samples page</a> or the <a href="https://github.com/schellingb/ZillaLibSamples">ZillaLibSamples</a> GitHub repository for short and easy to understand sample code for almost all features.</p>
