Update project generator to allow Visual Studio projects without XP support

--- a/project-generator/index.html
+++ b/project-generator/index.html
@@ -37,14 +37,15 @@ title: Project Generator
 <table width="100%"><tbody><tr valign="top"><td>
 <div><label for="for_vc6">Visual Studio 6.0:</label><input type="checkbox" name="for_vc6" id="for_vc6" value="1"><span class="chk">(VC6)</span></div>
 <div><label for="for_vc9">Visual Studio 2010:</label><input type="checkbox" name="for_vc9" id="for_vc9" value="1"><span class="chk">(VC9)</span></div>
-<div><label for="for_vs">Visual Studio 2012+:</label><input type="checkbox" name="for_vs" id="for_vs" value="1" checked=""><span class="chk">(2012/2013/2015)</span></div>
-<div><label for="for_linux">Linux:</label><input type="checkbox" name="for_linux" id="for_linux" value="1" checked=""><span class="chk">(Makefile)</span></div>
-<div><label for="for_osx">Mac OS X:</label><input type="checkbox" name="for_osx" id="for_osx" value="1" checked=""><span class="chk">(Xcode)</span></div>
+<div><label for="for_vs">Visual Studio 2012+:</label><input type="checkbox" name="for_vs" id="for_vs" value="1" checked><span class="chk">(2012/2013/2015)</span></div>
+<div><label for="for_vsxp">Visual Studio 2012+ XP:</label><input type="checkbox" name="for_vsxp" id="for_vsxp" value="0"><span class="chk">(<a href="https://msdn.microsoft.com/en-us/library/jj851139.aspx" target="_blank">WinXP support</a>)</span></div>
+<div><label for="for_linux">Linux:</label><input type="checkbox" name="for_linux" id="for_linux" value="1" checked><span class="chk">(Makefile)</span></div>
 </td><td style="padding-left:20px;border-left:1px dotted #888">
-<div><label for="for_android">Android:</label><input type="checkbox" name="for_android" id="for_android" value="1" checked=""><span class="chk">(Android SDK)</span></div>
-<div><label for="for_ios">iOS:</label><input type="checkbox" name="for_ios" id="for_ios" value="1" checked=""><span class="chk">(Xcode)</span></div>
-<div><label for="for_nacl">NaCl:</label><input type="checkbox" name="for_nacl" id="for_nacl" value="1" checked=""><span class="chk">(Chrome <a href="https://developer.chrome.com/native-client" target="_blank">Native Client</a>)</span></div>
-<div><label for="for_emscripten">HTML5:</label><input type="checkbox" name="for_emscripten" id="for_emscripten" value="1" checked=""><span class="chk">(Using <a href="https://github.com/kripken/emscripten" target="_blank">Emscripten</a>)</span></div>
+<div><label for="for_osx">Mac OS X:</label><input type="checkbox" name="for_osx" id="for_osx" value="1" checked><span class="chk">(Xcode)</span></div>
+<div><label for="for_android">Android:</label><input type="checkbox" name="for_android" id="for_android" value="1" checked><span class="chk">(Android SDK)</span></div>
+<div><label for="for_ios">iOS:</label><input type="checkbox" name="for_ios" id="for_ios" value="1" checked><span class="chk">(Xcode)</span></div>
+<div><label for="for_nacl">NaCl:</label><input type="checkbox" name="for_nacl" id="for_nacl" value="1" checked><span class="chk">(Chrome <a href="https://developer.chrome.com/native-client" target="_blank">Native Client</a>)</span></div>
+<div><label for="for_emscripten">HTML5:</label><input type="checkbox" name="for_emscripten" id="for_emscripten" value="1" checked><span class="chk">(Using <a href="https://github.com/kripken/emscripten" target="_blank">Emscripten</a>)</span></div>
 </td></tr></tbody></table>
 <br>
 
