--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -5,5 +5,8 @@ title: Tutorials
 
 <h2>Tutorials</h2>
 
+<h3>Text Tutorials</h3>
+<li><a href="setting-up-zillalib-with-visual-studio">Setting up ZillaLib with Visual Studio</a><br>This tutorial explains the entire process of downloading the library, creating a new project, building and running.</li>
+
 <h3>Video Tutorials</h3>
 <li><a href="https://www.youtube.com/watch?v=vt0i55G2LQk">Setting up ZillaLib with Visual Studio</a><br>The video shows the entire process of downloading the library, creating a new project, building and running. Due to the framework being lightweight and having zero dependencies, this process can be done in under 3 minutes.</li>
