Add skeletal mesh with inverse kinematics sample

--- a/samples/index.html
+++ b/samples/index.html
@@ -116,6 +116,7 @@ function GetData(i)
 		{ 'cat': '3D',        'src': '31-basic-3d.inl',                          'name': 'Basic 3D',                          'desc': 'Basic example of rendering a 3D scene' },
 		{ 'cat': '3D',        'src': '32-3d-materials.inl',                      'name': 'Advanced 3D Materials',             'desc': 'Using advanced and custom shaders for materials' },
 		{ 'cat': '3D',        'src': '33-3d-particles.inl',                      'name': '3D Particles',                      'desc': 'A simple effect using the 3D particle system' },
+		{ 'cat': '3D',        'src': '34-skeletal-mesh-ik.inl',                  'name': 'Skeletal Mesh IK',                  'desc': 'Loading a skeletal mesh with inverse kinematics' },
 	][i-1];
 }
 </script>
