Intro text update

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 	<div class="module color-5">
 
 		<h2>Welcome to ZillaLib</h2>
-		<p>ZillaLib is a 2D game creation framework that runs on pretty much every open platform out there. Windows, Linux, Mac OS X, Android, iOS, Chrome Native Client and Emscripten (HTML5).</p>
+		<p>ZillaLib is a <a href="/samples/#2D">2D</a> and <a href="/samples/#3D">3D</a> game creation framework that runs on pretty much every open platform out there. Windows, Linux, macOS, Android, iOS, Chrome Native Client and Emscripten (HTML5).</p>
 		<p>It's a sleek C++ library that compiles to all platforms with zero change in the game code. Truly write once, run everywhere. Of course it is still possible to deviate parts easily where needed. For instance for multitouch or touchscreen keyboard inputs.</p>
 		<p>The library itself compiles quickly, has zero external dependencies, and links statically adding only around 250kb to the binary size of the game. Still it comes with plenty of features.</p>
 
